Fix nav alignment.

--- a/app/assets/stylesheets/themes/turntable/app/theme.css.scss
+++ b/app/assets/stylesheets/themes/turntable/app/theme.css.scss
@@ -18,9 +18,12 @@
     a { background: none; }
   }
 }
+.symmetry .nav {
+  float: left;
+}
 
 .divider-earbuds {
-  margin: 0 auto;
+  margin: 0 auto 20px auto;
 }
 
 .controls {
